Actualiza análisis EDA por error en print

--- a/notebooks/eda_visuals_and_statistics.ipynb
+++ b/notebooks/eda_visuals_and_statistics.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "90ca8889",
    "metadata": {},
    "outputs": [
@@ -573,23 +573,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La altura media de la UFC es:  178.33\n"
+      "La altura media de la UFC es:  178.33 cm\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None, 'cm')"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "mean_val=silver_df['Height(cm)'].mean().round(2)\n",
-    "print(\"La altura media de la UFC es: \",mean_val),\"cm\""
+    "print(\"La altura media de la UFC es: \",mean_val,\"cm\")"
    ]
   },
   {
